import "goby/common/protobuf/option_extensions.proto";
import "goby/common/protobuf/app_base_config.proto";

package goby.util.protobuf;

message GobyStoreServerConfig
{
  optional AppBaseConfig base = 1;  
  
}
